<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/sign_etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/signup_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/sign_etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sign_etName"
        android:layout_alignStart="@+id/sign_etName"
        android:layout_below="@+id/sign_etName"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/signup_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/sign_etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sign_etEmail"
        android:layout_alignStart="@+id/sign_etEmail"
        android:layout_below="@+id/sign_etEmail"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/signup_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sign_etPassword"
        android:layout_alignStart="@+id/sign_etPassword"
        android:layout_below="@+id/sign_etPassword"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_background"
        android:text="@string/signup_button_text"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />
</RelativeLayout>